--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -25,7 +25,7 @@
 							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">作業2</a>                
 							  <a href="/teacher/work1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">小老師</a>
 							  <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">心得</a>						  
-							  <a href="/teacher/grade/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">成績</a>
+							  <a href="/teacher/grade/0/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">成績</a>
               </p>
               <p style="padding:0px; margin:2px;">
               <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>
