--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
-{% load tag %}
 {% block content %}
 {% if lesson == "1" %}
-      {% include "student/submitA.html" with index=index %}
+    {% include "student/submitA.html" %}
 {% elif lesson == "2" or lesson == "3" %}
-      {% include "student/submitB.html" with index=index %}
+    {% include "student/submitB.html" %}
 {% endif %}
 {% endblock %}
