--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -27,7 +27,6 @@ function MM_swapImage() { //v3.0
 
 {% extends "base.html" %}
 {% load tag %}
-{% block title %} Teachers {% endblock %}
 {% block content %}
 {% if subject_id == "A" %}
     <p><a href="/static/files/programming_scratch.pdf" target=_blank role="button" class="btn btn-info">教材簡介</a></p>
@@ -378,6 +377,26 @@ function MM_swapImage() { //v3.0
   </tr>
   </table> 
 <img src="/static/images/euler/certificate.png">	
-{% endif %}
+{% elif subject_id == "D" %}
+<img src="/static/images/ck/ck.png"><BR>
+		<table style="border:0px; width:900px;">    
+  <tr>
+<td>  
+<a onmouseover="MM_swapImage('menu01','','/static/images/ck/ck012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D01"><img name=menu01 src="/static/images/ck/ck01.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu03','','/static/images/ck/ck032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D03"><img name=menu03 src="/static/images/ck/ck03.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu05','','/static/images/ck/ck052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D05"><img name=menu05 src="/static/images/ck/ck05.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu07','','/static/images/ck/ck072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D07"><img name=menu07 src="/static/images/ck/ck07.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu09','','/static/images/ck/ck092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D09"><img name=menu09 src="/static/images/ck/ck09.png"></a><br><br>  </td>
+  <td>
+<a onmouseover="MM_swapImage('menu02','','/static/images/ck/ck022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D02"><img name=menu02 src="/static/images/ck/ck02.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu04','','/static/images/ck/ck042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D04"><img name=menu04 src="/static/images/ck/ck04.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu06','','/static/images/ck/ck062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D06"><img name=menu06 src="/static/images/ck/ck06.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu08','','/static/images/ck/ck082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D08"><img name=menu08 src="/static/images/ck/ck08.png"></a><br><br>
+<a onmouseover="MM_swapImage('menu10','','/static/images/ck/ck102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/D10"><img name=menu10 src="/static/images/ck/ck10.png"></a><br><br>
+    </td>
+  </tr>
+  </table> 
+<img src="/static/images/ck/certificate.png">	
+{% endif %}    
 <BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
 {% endblock %}
