--- a/templates/student/show.html
+++ b/templates/student/show.html
@@ -33,7 +33,7 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
 
 
 
-{% elif lesson == "2" or lesson == "3" %}
+{% elif lesson == "2" or lesson == "3" or lesson == "4" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
     <div>心得感想：</div>
