--- a/templates/student/submitB.html
+++ b/templates/student/submitB.html
@@ -110,7 +110,7 @@
     <tr>
         {% if work_dict|hash_date:index %}
         <td>
-            <a href="/student/work/show/{{lesson_id}}/{{index}}/{{user.id}}">觀看({{work_dict|hash_date:index}})</a>
+            <a href="/student/work/show/{{typing}}/{{lesson_id}}/{{index}}/{{user.id}}">觀看({{work_dict|hash_date:index}})</a>
         </td>
         {% endif %}
         {% if lesson_id == 2 %}
