--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -64,7 +64,11 @@
           
         {% if enroll.certificate_euler %}
         <tr><td><img src='/static/certification/3/1/{{enroll.id}}.jpg'></td></tr>
-        {% endif %}                 
+        {% endif %}        
+        
+        {% if enroll.certificate_vphysics2 %}
+        <tr><td><img src='/static/certification/4/1/{{enroll.id}}.jpg'></td></tr>
+        {% endif %}         
         {% endfor %}    
 
       </table>
