--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -31,6 +31,7 @@
               <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>
               <a href="/survey/pre_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課前問卷</a>
 							<a href="/survey/post_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課後問卷</a>
+							<a href="/show/list/{{classroom.id}}" role="button" class="btn btn-success">創意秀</a>
               </p>   
               </td>
             </tr>
