--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,8 @@ jQuery(function () {
       </li>
       <li><a href="#"><img src="/static/images/icon_lesson.png"> 藝廊</a>    
         <ul>
-          <li><a href="/show/gallery/1">Scratch創意秀</a></li>
-          <li><a href="/show/gallery/2">VPhysics創意秀</a></li>                
+          <li><a href="/show/gallery/show/1">Scratch創意秀</a></li>
+          <li><a href="/show/gallery/show/2">VPhysics創意秀</a></li>                
         </ul>
       </li>           
       {% if user.is_authenticated %}  
