--- a/templates/student/lesson/B14.html
+++ b/templates/student/lesson/B14.html
@@ -112,4 +112,6 @@
 <BR>
 作業：<BR><BR>
 
-三顆球從高空自由落下互相追撞。
+三顆球從高空自由落下互相追撞。<BR>
+  
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2UHS883_P60" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
