--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -68,9 +68,11 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
         </div>
         <font color=black>執行結果：</font><BR>
         {% if lesson == "2" %}
-        <img width=880 src="/{{ work.picture }}">
+        <img width=880 src="/static/work/vphysics/{{student.id}}/{{index}}/{{work.id}}.jpg">
         {% elif lesson == "3" %}
-        <img width=880 src="/static/work/euler/{{student.id}}/{{index}}/{{work.id}}.jpg">          
+        <img width=880 src="/static/work/euler/{{student.id}}/{{index}}/{{work.id}}.jpg">     
+        {% elif lesson == "4" %}
+        <img width=880 src="/static/work/ck/{{student.id}}/{{index}}/{{work.id}}.jpg">          
         {% endif %}
         <form action="" enctype="multipart/form-data"  method="post">
             <table class="table" style="width:300px">
