--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -406,6 +406,7 @@ function MM_swapImage() { //v3.0
 <BR><BR>
 <a href="/static/files/programming_vphysics.pdf" target=_blank role="button" class="btn btn-info">教材簡介</a>
 <a href="http://vphysics.ntu.edu.tw" target=_blank role="button" class="btn btn-info">更多VPhysics課程</a>
+<a href="http://www.glowscript.org/#/user/GlowScriptDemos/folder/Examples/" target=_blank role="button" class="btn btn-info">GlowScriptDemos</a>
 		<table style="border:0px; width:900px;">
   <tr>
   <td>
