--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% if lesson == "1" %}
     {% include "student/submitA.html" %}
-{% elif lesson == "2" or lesson == "3" or lesson == "4" %}
+{% elif lesson == "2" or lesson == "3" or lesson == "4" or lesson == "5" %}
     {% include "student/submitB.html" %}
 {% endif %}
 {% endblock %}
