--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -72,7 +72,9 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
         {% elif lesson == "3" %}
         <img width=880 src="/static/work/euler/{{student.id}}/{{index}}/{{work.id}}.jpg">     
         {% elif lesson == "4" %}
-        <img width=880 src="/static/work/ck/{{student.id}}/{{index}}/{{work.id}}.jpg">          
+        <img width=880 src="/static/work/ck/{{student.id}}/{{index}}/{{work.id}}.jpg">     
+        {% elif lesson == "5" %}
+        <img width=880 src="/static/work/vphysics2/{{student.id}}/{{index}}/{{work.id}}.jpg">            
         {% endif %}
         <form action="" enctype="multipart/form-data"  method="post">
             <table class="table" style="width:300px">
