--- a/templates/teacher/memo.html
+++ b/templates/teacher/memo.html
@@ -90,7 +90,27 @@
             <td><a href="/teacher/check/1/{{lesson}}/1/{{enroll.student_id}}/{{enroll.classroom_id}}">自訂作業{% if enroll.score_memo > 0 %}({{enroll.score_memo}}){% endif%}</a></td>
             </tr>
         {% endfor %}
-        </table>              
+        </table>         
+        {% elif lesson == "5" %}
+         <table>
+        <tr>   
+            <td>姓名</td>
+            <td>批閱心得</td>
+			      <td>證書</td>
+            <td>姓名</td>
+            <td>批閱心得</td>	
+			</tr>
+        {% for enroll in enrolls %}
+            <tr>
+						<td>{{enroll.seat}})<a href="/student/memo_user/{{enroll.student_id}}">{{enroll.student.first_name}}</a></td>	
+            <td><a href="/teacher/check/0/{{lesson}}/1/{{enroll.student_id}}/{{enroll.classroom_id}}">VPhysics 18堂課{% if enroll.score_memo_vphysics3 > 0 %}({{enroll.score_memo_vphysics3}}){% endif%}</a></td>
+			<td>{% if enroll.certificate_vphysics3 %}<a href="#" data-unit="1" data-classroomid="{{enroll.classroom_id}}" data-enrollid="{{ enroll.id }}" data-action="uncertificate" class="certificate">取消<a target="certView" href="/certificate/show/5/1/{{enroll.id }}"> <img src="/static/images/certificate.png"></a></a>{% else %}<a href="#" data-unit="1" data-classroomid="{{enroll.classroom_id}}" data-enrollid="{{ enroll.id }}" data-action="certificate" class="certificate">核發</a>{% endif %}</td>
+            <td>{{enroll.seat}}){{enroll.student.first_name}}</td>
+            <td><a href="/teacher/check/1/{{lesson}}/1/{{enroll.student_id}}/{{enroll.classroom_id}}">自訂作業{% if enroll.score_memo > 0 %}({{enroll.score_memo}}){% endif%}</a></td>
+            </tr>
+        {% endfor %}
+        </table>         
+          
         {% else %}
           1234
         {% endif %}
