--- a/templates/student/lesson/E02.html
+++ b/templates/student/lesson/E02.html
@@ -73,5 +73,5 @@
 <p>設定 v 的數值,並改變程式碼中 while (cube.pos.x &lt; 0.10): 中的數值 0.10 為你想要的數值,執行程式,看看結果,有什麼不同。</p>
 <p>更改 display()中,參數 x、y 與 center 的值中的數值,看發生了什麼差異。</p>
 <p>改變 rate()括號中的值,並用你的手錶或碼錶計時,看看到模擬停止時,不同數值在實際時間所造成的差異。</p>
-<p>將這一行程式碼 cube = box(pos=vector(0, 0.05/2, 0), length=0.05, height=0.05, width=0.05)改為cube = box(pos=vector(0, 0.05/2, 0), length=0.05, height=0.05, width=0.05, material= materials.wood)後,執行程式,你會發現木塊上有了木質條紋。</p>
+<p>將這一行程式碼 cube = box(pos=vector(0, 0.05/2, 0), length=0.05, height=0.05, width=0.05)改為cube = box(pos=vector(0, 0.05/2, 0), length=0.05, height=0.05, width=0.05, texture= textures.wood)後,執行程式,你會發現木塊上有了木質條紋。</p>
 <p>作業:修改模擬程式，計算以速度0.03公尺/秒向右移動0.1公尺，再向左移動0.2公尺所需的時間。</p>
