--- a/templates/teacher/grade.html
+++ b/templates/teacher/grade.html
@@ -1,10 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<a href="/teacher/grade/0/1/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and lesson == "1" and unit == "1" %}btn-info active{% endif %}'>12堂課</a>
-<a href="/teacher/grade/0/1/2/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and lesson == "1" and unit == "2" %}btn-info active{% endif %}'>實戰入門</a>
-<a href="/teacher/grade/0/1/3/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and lesson == "1" and unit == "3" %}btn-info active{% endif %}'>實戰進擊</a>
-<a href="/teacher/grade/0/1/4/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and lesson == "1" and unit == "4" %}btn-info active{% endif %}'>實戰高手</a>
-<a href="/teacher/grade/1/1/1/{{classroom.id}}" role="btn" class='btn {% if typing == "1" and lesson == "1" %}btn-info active{% endif %}'>自訂作業</a>
+{% if lesson == "1" %}
+<a href="/teacher/grade/0/1/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "1" %}btn-info active{% endif %}'>12堂課</a>
+<a href="/teacher/grade/0/1/2/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "2" %}btn-info active{% endif %}'>實戰入門</a>
+<a href="/teacher/grade/0/1/3/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "3" %}btn-info active{% endif %}'>實戰進擊</a>
+<a href="/teacher/grade/0/1/4/{{classroom.id}}" role="btn" class='btn {% if typing == "0" and unit == "4" %}btn-info active{% endif %}'>實戰高手</a>
+{% elif lesson == "2" %}
+<a href="/teacher/grade/0/2/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+{% elif lesson == "3" %}
+<a href="/teacher/grade/0/3/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+{% elif lesson == "4" %}
+<a href="/teacher/grade/0/4/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+{% elif lesson == "5" %}
+<a href="/teacher/grade/0/5/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+{% endif %}
+<a href="/teacher/grade/1/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "1" %}btn-info active{% endif %}'>自訂作業</a>
 <BR>
 班級名稱：{{ classroom.name }}<BR>
 <table>
