--- a/templates/account/line_form.html
+++ b/templates/account/line_form.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Create a question{% endblock %}
+{% load tag %}
 {% block header %}
 <script type="text/javascript" src="//cdn.ckeditor.com/4.5.9/standard-all/ckeditor.js"></script>
 <script>
@@ -20,18 +22,29 @@ CKEDITOR.plugins.add('dreamerpasteimage', {
 </script>
 {% endblock %}
 {% block content %}
-        <h1>班級名稱：{{classroom.name}}</h1>
+        <h1>對象：{{user_id|realname}}</h1>
          <form action="" enctype="multipart/form-data"  method="post">
             <table class="table">
-                {{ form.as_table }}
-                <tr><th>檔案:</td><td><input id="file" name="files" type="file"  multiple/><input id="submit" type="submit" value="送出"><td</tr>
-
+                {{ form.as_table }}       
+           <tr><th>檔案:</td><td><input id="file" name="files" type="file"  multiple/><input id="submit" type="submit" value="送出"><td</tr>
             </table>
             {% csrf_token %}
+
         </form>
+        <BR>
+        <h1>歷史私訊</h1>
+        <table class="table">
+        {% for message, read in messages %}
+        <tr><td>{{message.time}}<a href="/account/line/detail/{{classroom_id}}/{{message.id}}">{{message.title}}{% if not read %}(未讀){% endif %}</a></td></tr>
+        {% empty %}
+        <tr><td>無</td></tr>
+        {% endfor %}
+        </table>
 {% endblock %}
 {% block domready %}
     CKEDITOR.replace("id_content", {
         extraPlugins: 'colorbutton,colordialog,dreamerpasteimage',
     } );	
+
+         
 {% endblock %}
