--- a/templates/student/memo.html
+++ b/templates/student/memo.html
@@ -10,7 +10,7 @@
         {% for data in datas %}
             <tr>
             <td>{{data.0.seat}}</td>
-            <td nowrap><a href="/student/memo_user/{{data.0.student_id}}">{{data.0.student.first_name}}</a></td>
+            <td nowrap><a href="/student/memo_user/{{lesson}}/{{data.0.student_id}}">{{data.0.student.first_name}}</a></td>
             <td>{{data.1}}</td>            
             </tr>
         {% endfor %}
