--- a/templates/student/memo_user.html
+++ b/templates/student/memo_user.html
@@ -4,7 +4,7 @@
 	學生姓名：{{student.first_name}}
     <table class="table">
     <tr>
-        <td>編號</td>
+        <td nowrap>編號</td>
         <td>作品</td>
         <td>心得</td>
 
