--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -21,17 +21,17 @@
                 <a href="/teacher/classroom/edit/{{classroom.id}}" role="button" class="btn btn-success">修改</a>
                 <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-success">學生</a>
                 <a href="/student/group/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
-							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">作業1</a>
-							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">作業2</a>                
+                <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>
+							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">指定作業</a>
+							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">自訂作業</a>                
+               </p>
+              <p style="padding:0px; margin:2px;">
+                <a href="/survey/pre_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課前問卷</a>
+			  				<a href="/survey/post_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課後問卷</a>
 							  <a href="/teacher/work1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">小老師</a>
 							  <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">心得</a>						  
-							  <a href="/teacher/grade/0/{{classroom.lesson}}/1/{{classroom.id}}" role="button" class="btn btn-success">成績</a>
-              </p>
-              <p style="padding:0px; margin:2px;">
-              <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>
-              <a href="/survey/pre_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課前問卷</a>
-							<a href="/survey/post_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課後問卷</a>
-							<a href="/show/list/{{classroom.id}}" role="button" class="btn btn-success">創意秀</a>
+							  <a href="/teacher/grade/0/{{classroom.lesson}}/1/{{classroom.id}}" role="button" class="btn btn-success">成績</a>       
+							  <a href="/show/list/{{classroom.id}}" role="button" class="btn btn-success">創意秀</a>
               </p>   
               </td>
             </tr>
